<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.1"
                android:gravity="center"
                android:text="@string/pick_a_park"
                android:textColor="#231F1F"
                android:textSize="50sp"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="16dp" />

            <ImageButton
                android:id="@+id/magicKingdom"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:contentDescription="@string/mkTODO"
                android:onClick="magicClick"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:srcCompat="@drawable/magickingdom"
                tools:layout_editor_absoluteX="0dp" />

            <ImageButton
                android:id="@+id/epcot"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:contentDescription="@string/epTODO"
                android:onClick="epcotClick"
                app:layout_constraintTop_toBottomOf="@+id/magicKingdom"
                app:srcCompat="@drawable/epcot"
                tools:layout_editor_absoluteX="16dp" />

            <ImageButton
                android:id="@+id/animalKingdom"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:contentDescription="@string/akTODO"
                android:onClick="animalClick"
                app:layout_constraintTop_toBottomOf="@+id/epcot"
                app:srcCompat="@drawable/animalkingdom"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="0dp" />

            <ImageButton
                android:id="@+id/hollywood"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:contentDescription="@string/hsTODO"
                android:onClick="hollywoodClick"
                app:layout_constraintTop_toBottomOf="@+id/animalKingdom"
                app:srcCompat="@drawable/hollywood"
                tools:layout_editor_absoluteX="0dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>